Closed
Bug 1732898
Opened 4 years ago
Closed 4 years ago
Crash in [@ ReadMABToDirectory]
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr91+ verified)
RESOLVED
FIXED
94 Branch
People
(Reporter: wsmwk, Assigned: mkmelin)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-esr91+
|
Details | Review |
All crashes are version 91
Crash report: https://crash-stats.mozilla.org/report/index/3a9ecc4d-ac38-4201-adca-b4e700210817
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll ReadMABToDirectory comm/mailnews/import/src/MorkImport.cpp:308
1 xul.dll MorkImportAddressImpl::ImportAddressBook comm/mailnews/import/src/MorkImport.cpp:218
2 xul.dll nsImportGenericAddressBooks::BeginImport comm/mailnews/import/src/nsImportAddressBooks.cpp:407
3 xul.dll XPTC__InvokebyIndex
4 @0x18cd6ef293f
5 xul.dll _tailMerge_d3dcompiler_47.dll
6 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1143
7 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:922
8 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:511
9 xul.dll Interpret js/src/vm/Interpreter.cpp:3226
Flags: needinfo?(mkmelin+mozilla)
| Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/d83e30472c11
fix Crash in [@ ReadMABToDirectory]. r=benc
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•4 years ago
|
status-thunderbird_esr91:
--- → affected
tracking-thunderbird_esr91:
--- → +
Target Milestone: --- → 94 Branch
| Assignee | ||
Comment 4•4 years ago
|
||
Comment on attachment 9243232 [details]
Bug 1732898 - fix Crash in [@ ReadMABToDirectory]. r=benc
[Approval Request Comment]
Safe crash fix.
Attachment #9243232 -
Flags: approval-comm-esr91?
| Reporter | ||
Comment 5•4 years ago
|
||
Comment on attachment 9243232 [details]
Bug 1732898 - fix Crash in [@ ReadMABToDirectory]. r=benc
[Triage Comment]
Approved for esr91
Attachment #9243232 -
Flags: approval-comm-esr91? → approval-comm-esr91+
Comment 6•4 years ago
|
||
| bugherder uplift | ||
Thunderbird 91.2.1:
https://hg.mozilla.org/releases/comm-esr91/rev/3b3713f06248
| Reporter | ||
Comment 7•4 years ago
|
||
I can see in crash-stats there are no reports from 91.2.1, so v.fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•