Bug 1732898 - fix Crash in [@ ReadMABToDirectory]. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D126791

--HG--
extra : rebase_source : fd6aa96282574efb5491bf02e351e0c0ec1bf30e
extra : amend_source : c2f6bed1605b5befaa9e3d3f2af5aa4c70761983